syntax = "proto3";

package blogpb;

option go_package = "blog/blogpb";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1;
}

message ReadBlogRequest {
    string blog_id = 1;
}

message ReadBlogRespone {
    Blog blog = 1;
}

message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogRespone {
    Blog blog = 1;
}

message DeleteBlogRequest {
    string blog_id = 1;
}

message DeleteBlogRespone {
    string blog_id = 1;
}

message ListBlogRequest {
}

message ListBlogRespone {
    Blog blog = 1;
}
service BlogService {
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
    // return NOT_FOUND if not found
    rpc ReadBlog (ReadBlogRequest) returns (ReadBlogRespone); 
    // return NOT_FOUND if not found
    rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogRespone);
    // return NOT_FOUND if not found
    rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogRespone);
    // return NOT_FOUND if not found
    rpc ListBlog (ListBlogRequest) returns (stream ListBlogRespone);

}